--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -4,7 +4,7 @@
     xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
     version="2.4">
 
-    <display-name>NEW Sample Web Application</display-name>
+    <display-name>Sample Web Application</display-name>
     <description>
         This is a simple web application to demonstrate Jenkins build, test and deploy capabilities along with ANT.
     </description>
